--- a/components/ModelFilters/template.html
+++ b/components/ModelFilters/template.html
@@ -1,3 +1,3 @@
 <self>
-  <div class="input" :v-for="any of this.@anys with (a) => a"></div>
+  <div class="input" @for="any of this.@anys with (a) => a"></div>
 </self>
