--- a/components/Card/template.html
+++ b/components/Card/template.html
@@ -9,7 +9,7 @@
 
       </div>
       <context-menu slot="context-menu">
-        <div :v-if="mixer.is(this.model, Pageable)">
+        <div @if="mixer.is(this.model, Pageable)">
           <context-menu-item :on-selected="navigator.navigate(this.model.url)">
             Open
           </context-menu-item>
@@ -20,7 +20,7 @@
             Edit
           </context-menu-item>
         </div>
-        <context-menu-item :on-selected="this.delete()" :v-if="this.model.canDelete()">
+        <context-menu-item :on-selected="this.delete()" @if="this.model.canDelete()">
           Delete
         </context-menu-item>
       </context-menu>
