--- a/components/ModelSearch/template.html
+++ b/components/ModelSearch/template.html
@@ -2,7 +2,7 @@
   <div class="search-bar">
     <input as="input" :on-change="this.onChange()" />
   </div>
-  <div class="models" :v-for="model of this.models with (m) => this.template(m)">
+  <div class="models" @for="model of this.models with (m) => this.template(m)">
 
   </div>
 </self>
